# colrev

./: .all-contributorsrc  .colrev_endpoints.json  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  INSTRUCTIONS.md  LICENSE  MANIFEST.in  Makefile  MarkJerome.txt  NewMerge.py  Piere.txt  README.md  SECURITY.md  SETUP.md  belle.txt  changelog.md  docker-compose.yml  endpoints.json  extension-development.md  gather.py  hacking.md  jocelle.txt  moana.txt  my_note.txt  mypatch.patch  mypy.ini  newfeatures.txt  notes.md  paper.md  (+21 more)
.devcontainer/: .bash_aliases  Dockerfile  adjust-docker-group.sh  devcontainer.json  dockerfile_entrypoint.sh  setup.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: build.yml  docs_deploy.yml  docs_make.yml  documentation.yml  make_docs.yml  poetry_update.yml  pre-commit.yml  publish.yml  publish_pypi.yml  tests.yml  tox_workflow.yml  update_requirements_txt.yml
analysis/: CONFERENCE_ABBREVIATIONS.csv  Dockerfile  JOURNAL_ABBREVIATIONS.csv  JOURNAL_VARIATIONS.csv  Makefile  acquire_pdfs.py  backward_search.py  backward_search_grobid.py  backward_search_prep.py  backward_search_process.py  cleanse_records.py  combine_individual_search_results.py  complete_manual.py  config.py  create_data_extraction.py  create_screen.py  data.py  data_pages.py  data_sheet.py  entry_hash_function.py  extract_manual_pre_merging_edits.py  fixing_errors.py  gather.py  hash_function_pipeline_commit_id.csv  importer.py  initialize.py  main.py  merge_duplicates.py  merge_duplicates_manual.py  pre_merging_quality_check.py  readme.md  reference_consolidation.py  reformat_bibliography.py  renew_hash_function.py  renew_hash_id.py  requirements.txt  sample_profile.py  screen.py  screen_1.py  screen_2.py  (+9 more)
analysis/R/: Dockerfile  Makefile  analyses.R  figure_defaults.R  journal-plot.R  journal-years.R  load_data.R  prisma-chart.R  readme.md  search-metrics.R  statistics.R  timeline-plot.R
colrev/: .colrev_endpoints.json  __init__.py  __version__.py  advisor.py  checker.py  cli.py  clone.py  commit.py  constants.py  corrections.py  data.py  dataset.py  debug.py  dedupe.py  distribute.py  environment.py  exceptions.py  exit_codes.py  git_repo.py  id_setter.py  init.py  load.py  logger.py  operation.py  pandas.py  paper.py  paths.py  pdf_get.py  pdf_get_man.py  pdf_prep.py  pdf_prep_man.py  prep.py  prep_man.py  prescreen.py  process.py  pull.py  push.py  readme.md  record.py  record_identifier.py  (+20 more)
colrev/built_in/: data.py  database_connectors.py  dedupe_built_in.py  load.py  pdf_get.py  pdf_get_man.py  pdf_prep.py  pdf_prep_man.py  prep.py  prep_man.py  prescreen.py  screen.py  search.py  search_sources.py
colrev/env/: __init__.py  complementary_material_prefixes.txt  complementary_material_strings.txt  docker_manager.py  environment_manager.py  grobid_service.py  language_service.py  local_index.py  local_index_builder.py  local_index_prep.py  local_index_sqlite.py  masterdata_curations.csv  package_endpoints.json  package_manager.py  package_status.json  pdf_hash_service.py  resources.py  screenshot_service.py  search_source_types.json  tei_parser.py  utils.py  zotero_translation_service.py
colrev/hooks/: __init__.py  check.py  format.py  report.py  share.py  update.py
colrev/linter/: colrev_direct_status_assign.py  colrev_lint.py  colrev_missed_constant_usage.py  colrev_records_variable_naming_convention.py  colrev_search_source_requests_import.py  readme.md
colrev/loader/: __init__.py  bib.py  enl.py  json.py  load_utils.py  load_utils_bib.py  load_utils_enl.py  load_utils_formatter.py  load_utils_md.py  load_utils_name_formatter.py  load_utils_nbib.py  load_utils_ris.py  load_utils_table.py  loader.py  md.py  nbib.py  ris.py  table.py
colrev/ops/: __init__.py  advisor.py  check.py  checker.py  clone.py  colrev_pandas.py  commit.py  compare.py  correct.py  dashboard.py  dashbord.py  data.py  dedupe.py  dedupe_benchmark.py  distribute.py  init.py  load.py  load_utils.py  load_utils_bib.py  load_utils_enl.py  load_utils_formatter.py  load_utils_md.py  load_utils_nbib.py  load_utils_ris.py  load_utils_table.py  loader.py  merge.py  paper.py  pdf_get.py  pdf_get_man.py  pdf_prep.py  pdf_prep_man.py  prep.py  prep_debug.py  prep_man.py  prescreen.py  pull.py  push.py  remove.py  repair.py  (+14 more)
colrev/package_manager/: __init__.py  (+11 more)
colrev_core/: __init__.py  _version.py  cli.py  clone.py  data.py  debug.py  dedupe.py  dedupe_man.py  distribute.py  environment.py  exceptions.py  grobid_client.py  init.py  load.py  load_custom.py  local_index.py  paper.py  pdf_get.py  pdf_get_man.py  pdf_prep.py  pdf_prep_man.py  prep.py  prep_man.py  prescreen.py  process.py  pull.py  push.py  readme.md  record.py  review_dataset.py  review_manager.py  screen.py  search.py  search_sources.py  service.py  settings.py  settings_editor.py  status.py  sync.py  tei.py  (+4 more)
data/: data.csv  edits.csv  readme.md  references.bib  screen.csv
docs/: Makefile  import.md  readme.md
review_template/: Dockerfile  __init__.py  _version.py  acquire_pdfs.py  back_search.py  backward_search.py  cleanse_manual.py  cleanse_records.py  cli.py  complete_manual.py  data.py  debug.py  dedupe.py  dedupe_man.py  entry_hash_function.py  grobid_client.py  importer.py  init.py  initialize.py  load.py  man_comp.py  man_dedupe.py  man_prep.py  paper.py  pdf_check.py  pdf_get.py  pdf_get_man.py  pdf_prep.py  pdf_prep_man.py  pdf_prepare.py  pdfs.py  pre-screen.py  pre_screen.py  prep.py  prep_man.py  prepare.py  prescreen.py  process.py  process_duplicates.py  process_duplicates_manual.py  (+20 more)
template/: .pre-commit-config.yaml  paper.md  private_config.yaml  readme.md  shared_config.yaml
test-philipp/: .gitignore  readme.md  settings.json  status.yaml
tests/: Matthew.txt  __init__.py  colrev_core_test.py  conftest.py  full_run_test.py  init_test.py  prep_test.py  readme.md  record_test.py  review_template_test.py  settings.json
(+5034 files in other folders)
