[tool.poetry]
name = "colrev"
version = "0.13.2"
description = "CoLRev: An open-source environment for collaborative reviews"
authors = ["Gerit Wagner <gerit.wagner@uni-bamberg.de>", "Julian Prester <julian.prester@sydney.edu.au>"]
license = "MIT"
readme = "README.md"
homepage="https://colrev-environment.github.io/colrev/"
repository = "https://github.com/CoLRev-Environment/colrev"
documentation = "https://colrev-environment.github.io/colrev/"
keywords = ["research", "reproducible research", "open science", "literature", "literature review", "systematic review", "systematic literature review"]
classifiers = [
   "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
include = ["CONTRIBUTING.md", "CHANGELOG.md", "LICENSE", "README.md", "colrev/py.typed"]

[tool.poetry.scripts]
colrev = "colrev.ui_cli.cli:main"
colrev-hooks-check = "colrev.hooks.check:main"
colrev-hooks-format = "colrev.hooks.format:main"
colrev-hooks-report = "colrev.hooks.report:main"
colrev-hooks-share = "colrev.hooks.share:main"
colrev-hooks-update = "colrev.hooks.update:main"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"               # lingua-language-detector does not yet support python3.13
click = "^8.1.6"
click-repl = "^0.3.0"
inquirer = "^3.1.3"
glom = "^22.1.0"
Jinja2 = "^3.1.2"
tqdm = "^4.64.1"
GitPython= "^3.1.29"
pre-commit = "^3.2.0"
docker = "7.1.0"                        # required in init to determine whether Docker is available
pydantic = "^2.9.1"
dictdiffer = "^0.9.0"
imagehash = "^4.3.1"
rapidfuzz = "^3.5.2"
bib-dedupe = "^0.10.0"                  # required in record_similarity
lxml = "^5.2.0"                         # required by tei_parser
pandas = "^2.2"
openpyxl = "^3.1.2"                     # required by pandas for Excel
PyYAML = "^6.0.0"
requests = "^2.32.0"
requests-cache = "^0.9.6"
lingua-language-detector = "^2.0.2"
pycountry = "^24.6.1"
nameparser = "^1.1.2"
number-parser = "^0.3.2"
pymupdf = "^1.24.3"
toml = "^0.10.2"
beautifulsoup4 = {version = "^4.11.1", optional = true }
m2r = {version = "^0.3.1", optional = true }
Sphinx = {version = "^5.2.3", optional = true }
sphinx-autodoc-typehints = {version = "^1.19.4", optional = true }
sphinx-click = {version = "^4.3.0", optional = true }
sphinx-rtd-theme = {version = "^1.1.1", optional = true }
sphinx-copybutton = {version = "^0.5.2", optional = true}
"sphinxcontrib.datatemplates" = {version = "^0.9.2", optional = true }
sphinx-design = {version = "^0.5.0", optional = true }
sphinx_collapse = {version = "^0.1.2", optional = true }
pylint = {version = "3.0.1", optional = true }
pytest = {version = "^7.2.1", optional = true }
pytest-mock = {version = "^3.10.0", optional = true }
pytest-skip-slow = {version = "^0.0.5", optional = true }
requests-mock = {version = "^1.10.0", optional = true }
coverage = {extras = ["toml"], version = "^7.3.2", optional = true }
coverage-badge = {version = "^1.1.0", optional = true }
types-click = {version = "^7.1.8", optional = true }
# Can't do 0.21 with poetry because of https://github.com/python-poetry/poetry/issues/9293
docutils = {version = "!=0.21.post1", optional = true }
mypy = {version = "1.12.0", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "sphinx-click", "sphinx-rtd-theme", "sphinxcontrib.datatemplates", "sphinx_collapse", "sphinx-design", "sphinx-copybutton", "docutils", "m2r", "beautifulsoup4"]
dev = ["pylint", "pytest", "coverage", "types-click", "pytest-mock", "requests-mock", "pytest-skip-slow", "m2r", "mypy", "importlib_metadata", "coverage-badge"]

[tool.mypy]
python_version = 3.13
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "yaml.*",
    "pkg_resources.*",
]
ignore_missing_imports = true

[tool.flake8]
exclude = [
    "tests/data/package_init/*",
]

[tool.pylint.MAIN]
extension-pkg-whitelist = "lxml.etree"
load-plugins = ["colrev.linter.colrev_direct_status_assign", "colrev.linter.colrev_missed_constant_usage", "colrev.linter.colrev_records_variable_naming_convention"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["R0801"]

[pytest]
norecursedirs = "tests/data/package_init/"

[tool.coverage.report]
omit = [
    "colrev/packages/*", # omit reference implementation
    "/usr/*", # omit everything in /usr
    "*crossrefapi/crossref/*",
    "colrev/env/grobid_service.py",
    "/tmp/*",
    "tests/*",
    "*/bib-dedupe/bib_dedupe/*",
    "tests/data/package_init/*",
]

[tool.coverage.run]
omit = [
    "colrev/packages/*", # omit reference implementation
    "/usr/*", # omit everything in /usr
    "*crossrefapi/crossref/*",
    "colrev/env/grobid_service.py",
    "colrev/ops/upgrade.py",
    "/tmp/*",
    "tests/*",
    "*/bib-dedupe/bib_dedupe/*",
]

[tool.ruff]
line-length = 160

[build-system]
# requires = ["poetry>=1.2.0b1"]
requires = ["poetry-core>=1.0.0", "cython<3.0"]
build-backend = "poetry.core.masonry.api"
