[project]
name = "colrev"
version = "0.14.0"
description = "CoLRev: An open-source environment for collaborative reviews"
authors = [
    { name = "Gerit Wagner", email = "gerit.wagner@uni-bamberg.de" },
    { name = "Julian Prester", email = "julian.prester@sydney.edu.au" }
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://colrev-environment.github.io/colrev/"
repository = "https://github.com/CoLRev-Environment/colrev"
documentation = "https://colrev-environment.github.io/colrev/"
keywords = [
    "research", "reproducible research", "open science",
    "literature", "literature review", "systematic review",
    "systematic literature review"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
requires-python = ">=3.10, <3.13"  # lingua-language-detector does not yet support python3.13
dependencies = [
    "click>=8.1.6",
    "click-repl>=0.3.0",
    "inquirer>=3.1.3",
    "glom>=22.1.0",
    "Jinja2>=3.1.2",
    "tqdm>=4.64.1",
    "GitPython>=3.1.29",
    "pre-commit>=3.2.0",
    "docker==7.1.0",                        # required in init to determine whether Docker is available
    "pydantic>=2.9.1",
    "dictdiffer>=0.9.0",
    "imagehash>=4.3.1",
    "rapidfuzz>=3.5.2",
    "bib-dedupe>=0.10.0",                   # required in record_similarity
    "lxml>=5.2.0",                          # required by tei_parser
    "pandas>=2.2",
    "openpyxl>=3.1.2",                      # required by pandas for Excel
    "PyYAML>=6.0.0",
    "requests>=2.32.0",
    "requests-cache>=0.9.6",
    "lingua-language-detector>=2.0.2",
    "pycountry>=24.6.1",
    "nameparser>=1.1.2",
    "number-parser>=0.3.2",
    "pymupdf>=1.24.3",
    "toml>=0.10.2"
]

[project.optional-dependencies]
docs = [
    "Sphinx>=5.2.3",
    "sphinx-autodoc-typehints>=1.19.4",
    "sphinx-click>=4.3.0",
    "sphinx-rtd-theme>=1.1.1",
    "sphinxcontrib.datatemplates>=0.9.2",
    "sphinx_collapse>=0.1.2",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "docutils!=0.21.post1",
    "m2r>=0.3.1",
    "beautifulsoup4>=4.11.1"
]
dev = [
    "pylint==3.0.1",
    "pytest>=7.2.1",
    "coverage[toml]>=7.3.2",
    "types-click>=7.1.8",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.10.0",
    "pytest-skip-slow>=0.0.5",
    "mypy==1.12.0",
    "coverage-badge>=1.1.0"
]

[project.scripts]
colrev = "colrev.ui_cli.cli:main"
colrev-hooks-check = "colrev.hooks.check:main"
colrev-hooks-format = "colrev.hooks.format:main"
colrev-hooks-report = "colrev.hooks.report:main"
colrev-hooks-share = "colrev.hooks.share:main"
colrev-hooks-update = "colrev.hooks.update:main"

[tool.mypy]
python_version = 3.13
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "yaml.*",
    "pkg_resources.*"
]
ignore_missing_imports = true

[tool.flake8]
exclude = [
    "tests/data/package_init/*",
]

[tool.pylint.MAIN]
extension-pkg-whitelist = "lxml.etree"
load-plugins = [
    "colrev.linter.colrev_direct_status_assign",
    "colrev.linter.colrev_missed_constant_usage",
    "colrev.linter.colrev_records_variable_naming_convention"
]

[tool.pylint."MESSAGES CONTROL"]
disable = ["R0801"]

[pytest]
norecursedirs = "tests/data/package_init/"

[tool.coverage.report]
omit = [
    "colrev/packages/*",
    "/usr/*",
    "*crossrefapi/crossref/*",
    "colrev/env/grobid_service.py",
    "/tmp/*",
    "tests/*",
    "*/bib-dedupe/bib_dedupe/*",
    "tests/data/package_init/*",
]

[tool.coverage.run]
omit = [
    "colrev/packages/*",
    "/usr/*",
    "*crossrefapi/crossref/*",
    "colrev/env/grobid_service.py",
    "colrev/ops/upgrade.py",
    "/tmp/*",
    "tests/*",
    "*/bib-dedupe/bib_dedupe/*"
]

[tool.ruff]
line-length = 160

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
